Fix front page layout on narrower displays.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -45,7 +45,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar a {
-    font-size: 16px;
+    font-size: 14px;
+    
+    @media (min-width: 1200px) {
+        font-size: 16px;
+    }
 }
 
 .page_heading {
